# gameoflife

./: .gitignore  CMakeLists.txt  Requirements.md  architecture.wsd  imgui.ini
cmake/: Conan.cmake
src/: CMakeLists.txt  common.h  cuda_memory.hpp  cuda_wrapper.h  main.cpp  options.cpp
src/scenes/: full_screen_opengl.cpp  full_screen_opengl.h  gol.h  pt.h
